syntax = "proto3";

package compo1_service;

message Arguments {
    uint32 argument = 1;
}

message Result {
    uint32 value = 1;
}

service Compo1 {
    rpc compo1(Arguments) returns (Result) {}
}
