syntax = "proto3";

package compo2_service;

message Arguments {
    uint32 argument = 1;
}

message Result {
    uint32 value = 1;
}

service Compo2 {
    rpc compo2(Arguments) returns (Result) {}
}
