registry = {
    "incrementer_service": {
        "grpc": 7003,
    },
    "twicer_service": {
        "grpc": 7004,
    },
    "halfer_service": {
        "grpc": 7005,
    },
    "compo1_service": {
        "grpc": 7006,
    },
    "compo2_service": {
        "grpc": 7007,
    },
    "compo3_service": {
        "grpc": 7008,
    },
}
